--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                     <button><a href="./pages/pag1alquiler.html">VISITAR</a></button>
                </div>
                 <div>
-                 <img src="/assets/Picsart_23-09-09_11-59-44-065.jpg" alt="">
+                 <img src="./assets/Picsart_23-09-09_11-59-44-065.jpg" alt="">
                 <h3>SE VENDE</h3>
                     <button ><a href="./pages/pag1ventas.html">VISITAR</a></button>
                </div>   
                <div>
-                    <img src="/assets/Screenshot_20231108_182314_Gallery.jpg" alt="">
+                    <img src="./assets/Screenshot_20231108_182314_Gallery.jpg" alt="">
                 <h3>COMPRO CASA</h3>
                 <button><a href="./pages/pag1otro.html">VISITAR</a></button></div>
         </section>
