--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -26,7 +26,7 @@
           <!-- Segunda navbar, donde volcamos realmente cada ítem de menú y su correspondiente hipervínculo -->
           <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-inverse">
-              <li> <a href="/index.html">INICIO</a></li>
+              <li> <a href="./index.html">INICIO</a></li>
               <li><a href="../ventas.html">VENTAS</a></li>
               <li class="active"><a href="#">ALQUILERES</a></li>
               <li><a href="./nosotros.html">Nosotros</a></li>
