--- a/pages/blog.html
+++ b/pages/blog.html
@@ -24,7 +24,7 @@
 
           <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-inverse">
-            <li><a href="/index.html">INICIO</a></li>
+            <li><a href="./index.html">INICIO</a></li>
           <li><a href="../pages/ventas.html">VENTAS</a></li>
           <li><a href="../pages/alquiler.html">ALQUILERES</a></li> 
           <li><a href="../pages/nosotros.html">Nosotros</a></li>
