--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,12 +24,12 @@
 
           <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-inverse">
-            <li><a href="./index.html">INICIO</a></li>
-          <li><a href="../pages/ventas.html">VENTAS</a></li>
-          <li><a href="../pages/alquiler.html">ALQUILERES</a></li> 
-          <li><a href="../pages/nosotros.html">Nosotros</a></li>
+            <li><a href="../index.html">INICIO</a></li>
+          <li><a href="./ventas.html">VENTAS</a></li>
+          <li><a href="./alquiler.html">ALQUILERES</a></li> 
+          <li><a href="./nosotros.html">Nosotros</a></li>
           <li class="active"><a href="#">Contacto</a></li>
-          <li><a href="../pages/blog.html">Blog</a></li>
+          <li><a href="./blog.html">Blog</a></li>
         </ul>
       </div>
     </nav>
