--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -26,10 +26,10 @@
           <ul class="nav navbar-nav navbar-inverse">
           <li><a href="./index.html">INICIO</a></li>
           <li class="active"><a href="#">VENTAS</a></li>
-          <li><a href="../pages/alquiler.html">ALQUILERES</a></li> 
-          <li><a href="../pages/nosotros.html">Nosotros</a></li>
-          <li><a href="../pages/contacto.html">Contacto</a></li>
-          <li><a href="../pages/blog.html">Blog</a></li>
+          <li><a href="./alquiler.html">ALQUILERES</a></li> 
+          <li><a href="./nosotros.html">Nosotros</a></li>
+          <li><a href="./contacto.html">Contacto</a></li>
+          <li><a href="./blog.html">Blog</a></li>
         </ul>
       </div>
     </nav>
