--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -24,7 +24,7 @@
 
           <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-inverse">
-          <li><a href="./index.html">INICIO</a></li>
+          <li><a href="../index.html">INICIO</a></li>
           <li class="active"><a href="#">VENTAS</a></li>
           <li><a href="./alquiler.html">ALQUILERES</a></li> 
           <li><a href="./nosotros.html">Nosotros</a></li>
