--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </header>
 
         <main>
-          <h3>OPORTUNIDADES</h2>
+          <h3>OPORTUNIDADES</h2><br>
         <section>
               <div>  
                 <img src="./assets/Screenshot_20231108_182205_Chrome.jpg" alt="">
