--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="./assets/Screenshot_20231108_182205_Chrome.jpg" alt="">
                     <h3>ARRIENDO CAMPO</h3>
                     <button><a href="./pages/pag1alquiler.html">VISITAR</a></button>
-               </div>
+               </div><br>
                 <div>
                  <img src="./assets/Picsart_23-09-09_11-59-44-065.jpg" alt="">
                 <h3>SE VENDE</h3>
