--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,7 +47,7 @@
   <img src="../assets/nosotros.webp" alt="">
     </div>
     <div>
-      <h2 class="SUBTITULOS-INDEX"> BRINDAMOS </h2>
+      <h3> BRINDAMOS </h2>
     </div>
     <section class="contenedor-anuncios">
       <article class="iconos">
