--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=no, minimal-ui">
         <link rel="stylesheet" href="./css/style.css">
-    </head>
+    </head> 
     <body>
-        <header>
+        <header class="inicio">
         <nav class="navbar nav navbar-inverse navbar-fixed-top" role="navigation">
           <!-- Primera navbar, correspondiente a mobile. Se agrupan los menús e ISOLogo para mostrarse mejor en las pantallas pequeñas -->
           <div class="navbar-header navbar-inverse">
@@ -22,8 +22,9 @@
               </button>
               </div>
 
-              <div class="collapse navbar-collapse navbar-ex1-collapse">
-              <ul class="nav navbar-nav navbar-inverse">
+          <!-- Segunda navbar, donde volcamos realmente cada ítem de menú y su correspondiente hipervínculo -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav navbar-inverse">
               <li class="active"><a href="#">INICIO</a></li>
               <li><a href="./pages/ventas.html">VENTAS</a></li>
               <li><a href="./pages/alquiler.html">ALQUILERES</a></li> 
@@ -43,19 +44,18 @@
       </header>
 
         <main>
-          <h3>OPORTUNIDADES</h2><br>
+          <h2>OPORTUNIDADES</h2><br>
         <section>
               <div>  
                 <img src="./assets/Screenshot_20231108_182205_Chrome.jpg" alt="">
                     <h3>ARRIENDO CAMPO</h3>
                     <button><a href="./pages/pag1alquiler.html">VISITAR</a></button>
-               </div><br>
+               </div>
                 <div>
                  <img src="./assets/Picsart_23-09-09_11-59-44-065.jpg" alt="">
                 <h3>SE VENDE</h3>
                     <button ><a href="./pages/pag1ventas.html">VISITAR</a></button>
                </div>   
-               <br>
                <div>
                     <img src="./assets/Screenshot_20231108_182314_Gallery.jpg" alt="">
                 <h3>COMPRO CASA</h3>
