--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./css/style.css">
     </head> 
     <body>
-        <header class="inicio">
+        <header>
         <nav class="navbar nav navbar-inverse navbar-fixed-top" role="navigation">
           <!-- Primera navbar, correspondiente a mobile. Se agrupan los menús e ISOLogo para mostrarse mejor en las pantallas pequeñas -->
           <div class="navbar-header navbar-inverse">
@@ -44,7 +44,7 @@
       </header>
 
         <main>
-          <h2>OPORTUNIDADES</h2><br>
+          <h2 class="opor">OPORTUNIDADES</h2><br>
         <section>
               <div>  
                 <img src="./assets/Screenshot_20231108_182205_Chrome.jpg" alt="">
@@ -56,6 +56,7 @@
                 <h3>SE VENDE</h3>
                     <button ><a href="./pages/pag1ventas.html">VISITAR</a></button>
                </div>   
+
                <div>
                     <img src="./assets/Screenshot_20231108_182314_Gallery.jpg" alt="">
                 <h3>COMPRO CASA</h3>
