--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </header>
 
         <main>
-          <h2 class="opor">OPORTUNIDADES</h2><br>
+          <h2>OPORTUNIDADES</h2><br>
         <section>
               <div>  
                 <img src="./assets/Screenshot_20231108_182205_Chrome.jpg" alt="">
