--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
          <input type="text" id="correo" required><br>
          <label for="MENSAJE">MENSAJE</label><br>
          <textarea></textarea> <br><br>
-         <input type="submit" value="Enviar formulario"/><br>
+         <input type="submit" value="Enviar"/><br>
           <br>
         </fieldset>
     </form>
