--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -44,9 +44,8 @@
     <main>
         <div class="imagen-blog">
             <img src="../assets/anuncio4.jpg" alt="">
-        </div>
-    </main>
-
+        <h3>Hermosa casa en Barrio Porvenir</h3>
+  </div></main>
 <footer>
     <section class="footer">
             <img src="../assets/logo cci.png" alt="">
