--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=no, minimal-ui">
+        <meta name="description" content="Alquileres, compras y ventas de propiedades en Reconquista y zona: casas, departamentos, terrenos y mas. tus sueños se hacen realidad en PuntoProp">
+        <meta name="keywords" content="CASA, DEPARTAMENTO, PH, QUINTA">
+        <meta name="autor" content="Maximiliano Ruiz Diaz">
+        <meta charset="UTF-8">
+        <meta property="og:title" content="PuntoProp Inmobiliaria">
         <link rel="stylesheet" href="./css/style.css">
     </head> 
     <body>
