--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PuntoProp</title>
+    <title>Blog - PuntoProp</title>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=no, minimal-ui">
+    <meta name="description" content="Mira nuestros tips sobre decoración. Tus sueños se hacen realidad en PuntoProp">
+    <meta name="keywords" content="CASA, DEPARTAMENTO, PH, QUINTA, LOCAL">
+    <meta name="copyright" content="PuntoProp">
+    <meta name="autor" content="Maximiliano Ruiz Diaz">
     <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <meta property="og:title" content="Blog - PuntoProp Inmobiliaria">
 </head> 
 <body>
     <header>
